store forecast data in local storage / display forecast data / limit number of items called from forecast list / fix css extra spaces / align weather data center / increase current weather image size / catch errors from fetch blocks

--- a/chamber/styles/home.css
+++ b/chamber/styles/home.css
@@ -36,8 +36,6 @@
     "forecast";
     gap: .5rem;
     padding: 1rem;
-    
-
 }
 
 .local-data > :nth-child(1) {grid-area: events;}
@@ -52,7 +50,6 @@
 .events-list{
     display: grid;
     grid-template-columns: 1fr;
-    
     gap: 1rem;
 }
 
@@ -72,6 +69,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    text-align: center;
 }
 
 .weather figure{
@@ -79,6 +77,7 @@
     font-size: 1.5rem;
     gap: .5rem;
 }
+
 
 .forecast p:last-child{
     align-self: center;
